Jenkinsfile.JenkinsSlaveManifest.remote.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins-slave
  labels:
    slave-agent: jenkins
spec:
  containers:
  - name: jdk-gradle-docker-k8s-helm
    image: ${JENKINS_SLAVE_CONTAINER_IMAGE_NAME}
    command:
    - cat
    tty: true
    volumeMounts:
    - name: docker-socket
      mountPath: /var/run/docker.sock
    - name: docker-cache-vol #not needed in real world (as it will be in the image already)
      mountPath: /root/.docker
#    - name: kubectl-cache-vol
#      mountPath: /root/.kube
    - name: gradle-cache-vol
      mountPath: /root/.gradle
    - name: helm-cache-vol
      mountPath: /root/.helm
  volumes:
  - name: docker-socket
    hostPath:
      path: /var/run/docker.sock
  - name: docker-cache-vol
    hostPath:
      path: /root/.docker
#  - name: kubectl-cache-vol
#    hostPath:
#      path: /root/.kube
  - name: gradle-cache-vol
    hostPath:
      path: /root/.gradle
  - name: helm-cache-vol
    hostPath:
      path: /root/.helm
