Jenkinsfile.JenkinsSlaveManifest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins-slave
  labels:
    slave-agent: jenkins
spec:
  containers:
  - name: jdk-gradle-docker-k8s-helm
    image: alpine_openjdk8_k8scdk
    command:
    - cat
    tty: true
    volumeMounts:
    - name: docker-socket
      mountPath: /var/run/docker.sock
    - name: gradle-cache-vol
      mountPath: /root/.gradle
    - name: helm-cache-vol
      mountPath: /root/.helm
  volumes:
  - name: docker-socket
    hostPath:
      path: /var/run/docker.sock
  - name: gradle-cache-vol
    hostPath:
      path: /root/.gradle
  - name: helm-cache-vol
    hostPath:
      path: /root/.helm
