k8s-jenkins-slave.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins-slave
  labels:
    slave-agent: jenkins
spec:
  containers:
#  - name: jnlp
#    image: jenkins/jnlp-slave
#    command:
#    - cat
#    tty: true
#    env:
#    - name: CONTAINER_ENV_VAR
#      value: jnlp  
  - name: jdk-gradle-docker-k8s
    image: openjdk:8-jdk-alpine
    command:
    - cat
    tty: true
    volumeMounts:
    - name: docker-socket
      mountPath: /var/run/docker.sock
    - name: docker-bin
      mountPath: /usr/bin/docker
    - name: kubectl-bin-in-path
      mountPath: /usr/local/sbin
    - name: docker-cache-vol
      mountPath: /root/.docker
    - name: kubectl-cache-vol
      mountPath: /root/.kube
    - name: gradle-cache-vol
      mountPath: /root/.gradle
  volumes:
  - name: docker-socket
    hostPath:
      path: /var/run/docker.sock
  - name: docker-bin
    hostPath:
      path: /usr/bin/docker
  - name: kubectl-bin-in-path
    hostPath:
      path: /usr/local/sbin
  - name: docker-cache-vol
    hostPath:
      path: /root/.docker
  - name: kubectl-cache-vol
    hostPath:
      path: /root/.kube
  - name: gradle-cache-vol
    hostPath:
      path: /root/.gradle
