tempIngress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echofe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: echofe-service
          servicePort: 9999
